--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-AI_API_KEY=AIzaSyCmf6hwWmVsnGvrmWZ5jQYPZiSLL5KqrvY
-AI_MODEL=gpt-4o-mini
+GEMINI_API_KEY=AIzaSyCmf6hwWmVsnGvrmWZ5jQYPZiSLL5KqrvY
+MODEL=gemini-1.5-flash
