--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studysphere-backend",
+  "name": "studysphere-ai",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
