--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "studysphere-ai",
+  "name": "cortexluma-backend",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": { "node": "18.x || 20.x" },
   "dependencies": {
-    "@google/generative-ai": "^0.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
-  }
+  "devDependencies": { "nodemon": "^2.0.22" }
 }
