--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   },
-  "devDependencies": { "nodemon": "^2.0.22" }
+  "devDependencies": { "nodemon": "^2.0.22" },
+  "license": "MIT"
 }
