--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "cortexluma-backend",
+  "name": "freepik-image-search",
   "version": "1.0.0",
-  "description": "Backend for CortexLuma AI chatbot using Google Gemini",
-  "type": "module",
+  "description": "A simple Node + Express app to search Freepik images safely via API proxy.",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": "18.x || 20.x"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "keywords": ["gemini", "ai", "express", "backend", "chatbot"],
-  "license": "MIT"
+  }
 }
