--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-PORT=5000
-GEMINI_API_KEY=AIzaSyCmf6hwWmVsnGvrmWZ5jQYPZiSLL5KqrvY
-MODEL=gemini-1.5-flash
+FREEPIK_API_KEY="FPSXf4c0cf8fc07e0ba05e22a54b6a3f4c34"
+
